# Nobody

./: .gitignore  BUILD_SUCCESS.md  CMakeLists.txt  FIXES_NEEDED.md  README.md  VERIFICATION_REPORT.md  activate.sh  build.sh  config.json  setup.sh
src/: main.cpp
src/ai/: AIBrain.cpp  AIBrain.h
src/core/: HttpClient.cpp  HttpClient.h
src/engine/: IntelligenceEngine.cpp  IntelligenceEngine.h
src/osint/: OSINTEngine.cpp  OSINTEngine.h
src/scraper/: WebScraper.cpp  WebScraper.h
src/search/: SearchEngine.cpp  SearchEngine.h
src/ui/: CLI.cpp  CLI.h
tests/: test_main.cpp
